--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,6 @@ cython_debug/
 /results/saint_train_4000
 /results/saint_graph_bs500
 /results/saint_graph_bs1000
+/results/saint_graph_bs2000
+/results/saint_graph_bs4000
+/results/saint_graph_bs6000
