--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,4 @@ cython_debug/
 /results/saint_graph_bs4000
 /results/saint_graph_bs6000
 /results/saint_graph_biased_bs10000
+/results/saint_graph_bs10000
