--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 /results/saint_graph_biased_bs10000
 /results/saint_graph_bs10000
 /results/saint_train_4000
+/results/saint_graph_biased_bs10000
+/results/benchmark
+/results/saint_graph_biased_bs10000
+/results/saint_graph_bs2000_pre
